# fast-and-fearless-evolution-of-server-side-webapps

./: .hindent.yaml  Makefile  README.md  outline.org
src/: customizations.tex  notes.tex  slides.md
src/listings/airship-demo/: ChangeLog.md  airship-demo.cabal
src/listings/airship-demo/src/: Main.hs
src/listings/haskell-examples/: .gitignore  haskell-examples.cabal
src/listings/haskell-examples/src/: Blaze.hs  Scotty.hs
src/listings/scotty-demo/: scotty-demo.cabal
src/listings/scotty-demo/src/: Scotty.hs
src/listings/yesod-demo/: .gitignore  README.md  package.yaml
src/listings/yesod-demo/app/: devel.hs
src/listings/yesod-demo/config/: keter.yml  routes  settings.yml
src/listings/yesod-demo/src/: Application.hs  Article.hs  Foundation.hs  Post.hs
src/listings/yesod-demo/src/Handler/: Home.hs
src/listings/yesod-demo/templates/: article-with-form.hamlet  article.hamlet  article.lucius  default-layout.hamlet  homepage.hamlet  post-comments.hamlet  post-comments.lucius  post-with-form.hamlet  post-with-form.lucius  post.hamlet
