name:                haskell-examples
version:             0.1.0.0
synopsis:            Code listings in slides
license:             MPL-2.0
license-file:        LICENSE
author:              Oskar Wickström
maintainer:          oskar.wickstrom@gmail.com
copyright:           Oskar Wickström
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Blaze
  build-depends:       base >= 4.7 && < 5
                     , lucid
                     , scotty
                     , bytestring
                     , text
  ghc-options: -Werror -Wall -fwarn-tabs
